--- a/debian/po/de.po
+++ b/debian/po/de.po
@@ -19,8 +19,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-01-06 19:08+0100\n"
+"Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
+"POT-Creation-Date: 2007-01-06 19:45+0100\n"
 "PO-Revision-Date: 2006-10-06 20:39+0200\n"
 "Last-Translator: Jens Seidel <jensseidel@users.sf.net>\n"
 "Language-Team: Debian German <debian-l10n-german@lists.debian.org>\n"
@@ -32,13 +32,21 @@ msgstr ""
 #. Type: text
 #. Description
 #. Main menu item
-#: ../nobootloader.templates:4
+#: ../nobootloader.templates:1001
 msgid "Continue without boot loader"
 msgstr "Ohne Bootloader fortfahren"
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:9
+#. Type: note
+#. Description
+#: ../nobootloader.templates:2001 ../nobootloader.templates:3001
+msgid "Setting firmware variables for automatic boot"
+msgstr "Setzen der Firmware-Variablen für den automatischen Start"
+
+#. Type: note
+#. Description
+#: ../nobootloader.templates:2001
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
@@ -52,17 +60,20 @@ msgstr ""
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:9
+#. Type: note
+#. Description
+#: ../nobootloader.templates:2001 ../nobootloader.templates:3001
 msgid ""
-" setenv boot-device ${OF_BOOT_DEVICE}\n"
-" setenv boot-file ${OF_BOOT_FILE}\n"
-" setenv auto-boot-timeout 5000\n"
-" setenv auto-boot? true"
+"You will only need to do this once.  Afterwards, enter the \"boot\" command "
+"or reboot the system to proceed to your newly installed system."
 msgstr ""
+"Dies muss nur einmal getan werden. Geben Sie danach den »boot«-Befehl ein "
+"oder starten Sie das System neu, um mit Ihrem neu installierten System "
+"fortzufahren."
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:9
+#: ../nobootloader.templates:2001
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
@@ -70,23 +81,10 @@ msgstr ""
 "Alternativ können Sie den Kernel von Hand booten, indem Sie Folgendes an der "
 "Firmware-Eingabeaufforderung eingeben:"
 
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
-msgid " ${KERNEL_BOOT}"
-msgstr ""
-
-#. Type: note
-#. Description
-#. flag:translate!:3
-#: ../nobootloader.templates:31
-msgid "Setting firmware variables for automatic boot"
-msgstr "Setzen der Firmware-Variablen für den automatischen Start"
-
 # FIXME: Linux-spezifisch
 #. Type: note
 #. Description
-#: ../nobootloader.templates:31
+#: ../nobootloader.templates:3001
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -103,36 +101,13 @@ msgstr ""
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:31
-msgid ""
-"   setenv kernconfig fs\n"
-"   setenv kerndev ${KERNDEV}\n"
-"   setenv kernfile ${KERNFILE}\n"
-"   setenv rootdev ${ROOTDEV}\n"
-"   setenv cmdappend ${CMDAPPEND}\n"
-"   save-all"
-msgstr ""
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:31
-msgid ""
-"You will only need to do this once.  Afterwards, enter the \"boot\" command "
-"or reboot the system to proceed to your newly installed system."
-msgstr ""
-"Dies muss nur einmal getan werden. Geben Sie danach den »boot«-Befehl ein "
-"oder starten Sie das System neu, um mit Ihrem neu installierten System "
-"fortzufahren."
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:51
+#: ../nobootloader.templates:4001
 msgid "No boot loader installed"
 msgstr "Kein Bootloader installiert"
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:51
+#: ../nobootloader.templates:4001
 msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
@@ -143,7 +118,7 @@ msgstr ""
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:51
+#: ../nobootloader.templates:4001
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
