--- a/debian/po/ta.po
+++ b/debian/po/ta.po
@@ -13,8 +13,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: ta\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-01-06 19:08+0100\n"
+"Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
+"POT-Creation-Date: 2007-01-06 19:45+0100\n"
 "PO-Revision-Date: 2006-10-12 01:25+0530\n"
 "Last-Translator: Damodharan Rajalingam <rdamodharan@gmail.com>\n"
 "Language-Team: Tamil <tamil-DI@yahoogroups.com>\n"
@@ -26,13 +26,21 @@ msgstr ""
 #. Type: text
 #. Description
 #. Main menu item
-#: ../nobootloader.templates:4
+#: ../nobootloader.templates:1001
 msgid "Continue without boot loader"
 msgstr "பூட் துவக்கி இல்லாமல் தொடர்க."
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:9
+#. Type: note
+#. Description
+#: ../nobootloader.templates:2001 ../nobootloader.templates:3001
+msgid "Setting firmware variables for automatic boot"
+msgstr "தானியங்கி துவக்கத்திற்கு திறந்த ஸ்திர மென்பொருளின் மாறிலிகளைஅமைத்தல்"
+
+#. Type: note
+#. Description
+#: ../nobootloader.templates:2001
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
@@ -45,17 +53,19 @@ msgstr ""
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:9
+#. Type: note
+#. Description
+#: ../nobootloader.templates:2001 ../nobootloader.templates:3001
 msgid ""
-" setenv boot-device ${OF_BOOT_DEVICE}\n"
-" setenv boot-file ${OF_BOOT_FILE}\n"
-" setenv auto-boot-timeout 5000\n"
-" setenv auto-boot? true"
+"You will only need to do this once.  Afterwards, enter the \"boot\" command "
+"or reboot the system to proceed to your newly installed system."
 msgstr ""
+"இதை நீங்கள் ஒரு முறை மட்டுமே செய்யத் தேவை. அதன் பின் \"boot\" கட்டளையை உள்ளிடலாம் அல்லது "
+"மீண்டும் கணினியை துவக்குவதால் நிறுவலின் அடுத்த கட்டத்திற்கு போகலாம்."
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:9
+#: ../nobootloader.templates:2001
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
@@ -65,20 +75,7 @@ msgstr ""
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:9
-msgid " ${KERNEL_BOOT}"
-msgstr ""
-
-#. Type: note
-#. Description
-#. flag:translate!:3
-#: ../nobootloader.templates:31
-msgid "Setting firmware variables for automatic boot"
-msgstr "தானியங்கி துவக்கத்திற்கு திறந்த ஸ்திர மென்பொருளின் மாறிலிகளைஅமைத்தல்"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:31
+#: ../nobootloader.templates:3001
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -94,35 +91,13 @@ msgstr ""
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:31
-msgid ""
-"   setenv kernconfig fs\n"
-"   setenv kerndev ${KERNDEV}\n"
-"   setenv kernfile ${KERNFILE}\n"
-"   setenv rootdev ${ROOTDEV}\n"
-"   setenv cmdappend ${CMDAPPEND}\n"
-"   save-all"
-msgstr ""
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:31
-msgid ""
-"You will only need to do this once.  Afterwards, enter the \"boot\" command "
-"or reboot the system to proceed to your newly installed system."
-msgstr ""
-"இதை நீங்கள் ஒரு முறை மட்டுமே செய்யத் தேவை. அதன் பின் \"boot\" கட்டளையை உள்ளிடலாம் அல்லது "
-"மீண்டும் கணினியை துவக்குவதால் நிறுவலின் அடுத்த கட்டத்திற்கு போகலாம்."
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:51
+#: ../nobootloader.templates:4001
 msgid "No boot loader installed"
 msgstr "துவக்கி ஏதும் நிறுவப் படவில்லை"
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:51
+#: ../nobootloader.templates:4001
 msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
@@ -132,7 +107,7 @@ msgstr ""
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:51
+#: ../nobootloader.templates:4001
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
