--- a/debian/po/vi.po
+++ b/debian/po/vi.po
@@ -14,8 +14,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer Level 1\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-01-06 19:08+0100\n"
+"Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
+"POT-Creation-Date: 2007-01-06 19:45+0100\n"
 "PO-Revision-Date: 2006-10-16 15:34+0930\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
 "Language-Team: Vietnamese <vi-VN@googlegroups.com>\n"
@@ -28,13 +28,21 @@ msgstr ""
 #. Type: text
 #. Description
 #. Main menu item
-#: ../nobootloader.templates:4
+#: ../nobootloader.templates:1001
 msgid "Continue without boot loader"
 msgstr "Tiếp tục không có bộ nạp khởi động"
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:9
+#. Type: note
+#. Description
+#: ../nobootloader.templates:2001 ../nobootloader.templates:3001
+msgid "Setting firmware variables for automatic boot"
+msgstr "Đang đặt các biến phần vững để tự động khởi động"
+
+#. Type: note
+#. Description
+#: ../nobootloader.templates:2001
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
@@ -47,17 +55,19 @@ msgstr ""
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:9
+#. Type: note
+#. Description
+#: ../nobootloader.templates:2001 ../nobootloader.templates:3001
 msgid ""
-" setenv boot-device ${OF_BOOT_DEVICE}\n"
-" setenv boot-file ${OF_BOOT_FILE}\n"
-" setenv auto-boot-timeout 5000\n"
-" setenv auto-boot? true"
+"You will only need to do this once.  Afterwards, enter the \"boot\" command "
+"or reboot the system to proceed to your newly installed system."
 msgstr ""
+"Bạn cần phải làm việc này chỉ một lần. Sau đó, hãy nhập lệnh « boot » (khởi "
+"động) hoặc khởi động lại hệ thống để tiếp tục đến hệ thống mới cài đặt."
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:9
+#: ../nobootloader.templates:2001
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
@@ -66,20 +76,7 @@ msgstr ""
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:9
-msgid " ${KERNEL_BOOT}"
-msgstr ""
-
-#. Type: note
-#. Description
-#. flag:translate!:3
-#: ../nobootloader.templates:31
-msgid "Setting firmware variables for automatic boot"
-msgstr "Đang đặt các biến phần vững để tự động khởi động"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:31
+#: ../nobootloader.templates:3001
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -95,35 +92,13 @@ msgstr ""
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:31
-msgid ""
-"   setenv kernconfig fs\n"
-"   setenv kerndev ${KERNDEV}\n"
-"   setenv kernfile ${KERNFILE}\n"
-"   setenv rootdev ${ROOTDEV}\n"
-"   setenv cmdappend ${CMDAPPEND}\n"
-"   save-all"
-msgstr ""
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:31
-msgid ""
-"You will only need to do this once.  Afterwards, enter the \"boot\" command "
-"or reboot the system to proceed to your newly installed system."
-msgstr ""
-"Bạn cần phải làm việc này chỉ một lần. Sau đó, hãy nhập lệnh « boot » (khởi "
-"động) hoặc khởi động lại hệ thống để tiếp tục đến hệ thống mới cài đặt."
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:51
+#: ../nobootloader.templates:4001
 msgid "No boot loader installed"
 msgstr "Chưa cài đặt bộ nạp khởi động"
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:51
+#: ../nobootloader.templates:4001
 msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
@@ -133,7 +108,7 @@ msgstr ""
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:51
+#: ../nobootloader.templates:4001
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
