[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r45333

--- a/debian/po/ml.po
+++ b/debian/po/ml.po
@@ -17,7 +17,7 @@ msgstr ""
 "Project-Id-Version: Debian Installer Level 1\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-01-06 22:48+0100\n"
-"PO-Revision-Date: 2007-02-17 20:46+0530\n"
+"PO-Revision-Date: 2007-02-21 23:22+0530\n"
 "Last-Translator: Praveen A <pravi.a@gmail.com>\n"
 "Language-Team: Swathanthra Malayalam Computing <smc-discuss@googlegroups."
 "com>\n"
@@ -52,8 +52,7 @@ msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
-"ഇതിനു പകരമായി ഫേംവെയര്‍ പ്രോംപ്റ്റില്‍ കെര്‍ണല്‍ മാന്വലായി എന്റര്‍ ചെയ്ത് നിങ്ങള്‍ക്ക് ബൂട്ട് ചെയ്യാന്‍ "
-"കഴിയും:"
+"ഇതിനു പകരമായി ഫേംവെയര്‍ പ്രോംപ്റ്റില്‍ കെര്‍ണല്‍ മാന്വലായി നല്‍കിയ് നിങ്ങള്‍ക്ക് ബൂട്ട് ചെയ്യാന്‍ കഴിയും:"
 
 #. Type: note
 #. Description
@@ -84,7 +83,7 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"നിങ്ങള്‍ക്കിത് ഒരു തവണയേ ചെയ്യേണ്ടി വരൂ. അതിനു ശേഷം \"boot\" കമാന്‍ഡ് എന്റര്‍ ചെയ്യുക അല്ലെങ്കില്‍ "
+"നിങ്ങള്‍ക്കിത് ഒരു തവണയേ ചെയ്യേണ്ടി വരൂ. അതിനു ശേഷം \"boot\" കമാന്‍ഡ് നല്‍കുക അല്ലെങ്കില്‍ "
 "നിങ്ങളുടെ പുതുതായി ഇന്‍സ്റ്റാള്‍ ചെയ്ത സിസ്റ്റത്തിലേക്ക് പോകാനായി റീബൂട്ട് ചെയ്യുക."
 
 #. Type: note
