* Merge from Ubuntu, with some improvements:   - Install and run mkvmlinuz on Pegasos if the kernel didn't already do     that for us.   - Mount /target/proc for mkvmlinuz.
r46000

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+nobootloader (1.18) UNRELEASED; urgency=low
+
+  * Merge from Ubuntu, with some improvements:
+    - Install and run mkvmlinuz on Pegasos if the kernel didn't already do
+      that for us.
+    - Mount /target/proc for mkvmlinuz.
+
+ -- Colin Watson <cjwatson@debian.org>  Thu, 22 Mar 2007 00:27:06 +0000
+
 nobootloader (1.17) unstable; urgency=low
 
   [ Updated translations ]
